# 8021xbypass

./: .gitignore  README.md  ROADMAP.md  config.example.toml  pyproject.toml
deploy/systemd/: new8021x-observe.env.example  new8021x-observe.service
docs/: COMMANDS.md  CURRENT_STATE.md  LAB_ENVIRONMENT.md  QUICKSTART.md  RASPBERRY_PI.md
scripts/: install_pi_observer.sh
src/new8021x/: __init__.py  __main__.py  appliance.py  cli.py  config.py  eapol.py  env.py  report.py
tests/: test_config.py  test_eapol.py  test_env.py  test_pcap.py
